fix z-index of frozen columns

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -54,6 +54,7 @@
 
       &.frozen {
         background-color: white;
+        z-index: 1;
       }
     }
   }
